[project]
name = "tcalendars"
version = "2.0.0"
authors = [
  { name="Krix Tam", email="krix.tam@qq.com" },
]
description = "交易日历"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcalendars"]
include = ["tcalendars/cache/se_calendar.csv", "tcalendars/cache/stock_name_code.csv", "tcalendars/cache/fund_name_code.csv"]

[project.urls]
Homepage = "https://github.com/KrixTam/tcalendars"
Issues = "https://github.com/KrixTam/tcalendars/issues"
