[project]
name = "tcalendars"
version = "2.1.0"
authors = [
  { name="Krix Tam", email="krix.tam@qq.com" },
]
description = "交易日历"
readme = "docs/README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcalendars"]
include = ["tcalendars/cache/data.dat"]

[project.urls]
Homepage = "https://github.com/KrixTam/tcalendars"
Issues = "https://github.com/KrixTam/tcalendars/issues"
